<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_profile"
        app:title="@string/personal_header">

        <EditTextPreference
            app:key="age"
            app:title="@string/age_label"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="height"
            app:title="@string/height_label"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="weight"
            app:title="@string/weight_label"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue=" "
            app:entries="@array/expenditure_entries"
            app:entryValues="@array/expenditure_values"
            app:key="expenditure"
            app:title="@string/spinnerExpenditure_label"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Preference category">
        <MultiSelectListPreference
            android:defaultValue="@array/diets_values"
            android:entries="@array/diets_entries"
            android:entryValues="@array/diets_values"
            android:key="diets"
            android:title="@string/diets_label" />

        <MultiSelectListPreference
            android:defaultValue="@array/intolerances_values"
            android:entries="@array/intolerances_entries"
            android:entryValues="@array/intolerances_values"
            android:key="intolerances"
            android:title="@string/intolerance_label" />
    </PreferenceCategory>


</PreferenceScreen>